--- a/src/styles/main_style.module.css
+++ b/src/styles/main_style.module.css
@@ -1,13 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
-
-
-.section{
-    display: grid;
-    place-items: center;
-    align-content: center;
-    min-height: 50vh;
-    margin-bottom: 50vh;
-}
 
 .Projects_section, .Contact_section{
     display: grid;
@@ -17,18 +7,23 @@
 }
 
 
-
 .section {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    min-height: 50vh;
+    margin-bottom: 50vh;
 }
-  
+
+
 .about_text {
+    display: flex;
+    flex-wrap: wrap;
     position: relative;
-    flex: 1;
     left:150px;
     top: 80px;
+    max-width: 250px;
 }
 .about_text h2{
     width: fit-content;
@@ -44,9 +39,8 @@
     height: fit-content;
     bottom: -100px;
     align-items: center;
-    justify-content: center;
-    right:300px;
-
+    justify-content: left;
+    left:780px;
     /* Adjust the margin as needed */
 }
 
@@ -60,4 +54,8 @@
 .text{
     transform: translateY(115px);
     transition: transform .5;
+}
+
+#contact{
+    font-size: 40px;
 }
