--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -8,6 +8,11 @@
     padding: 0 2em;
 }
 
+h1{
+    font-family: 'Source Code Pro', monospace;
+
+}
+
 .link_containers {
     /* Remove position: absolute; and left: 800px; */
     display: flex;
@@ -20,8 +25,8 @@
     margin: 0 5rem;
 }
 
-.link:hover {
-    background-color: #777;
+.link > h1:hover {
+    color: #AD9BD5;
 }
 
 .div_logo {
@@ -31,4 +36,5 @@
 
 .logo img {
     max-height: 100%;
+
 }
