--- a/src/styles/projects_style.module.css
+++ b/src/styles/projects_style.module.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
 .main {
     display: grid;
@@ -12,8 +13,12 @@
     align-items: center;
     height: 100vh; /* Adjust the height as needed */
 }
-
+.main_header{
+    font-size: 50px;
+}
 .img_container {
+    height: 500px;
+    width: 500px;
     display: flex;
     margin: 1%;
     height: fit-content;
@@ -21,8 +26,8 @@
     align-items: center; /* Add this line to center vertically */
 }
 .img_container img {
-    height: auto;
     width: 100%;
+    height: auto;
     border-radius: 15%;
     box-shadow: 0 0 100px 10px #BE6380;
 }
@@ -31,32 +36,26 @@
     z-index: 2;
 
 }
-
 .img_container > img:nth-child(1) {
     position: relative;
     transform: translate(4%, -7%);
-    left: 350px;
-    bottom: -30px;
-    z-index: 3;
-    transition: z-index 0s, bottom 0.2s;
+    transition: bottom 0.2s;
     box-shadow: 0 0 10px 10px 1px #0d3fca;
-
-
 
 }
 
 .img_container > img:nth-child(3) {
     position: relative;
-    left: -350px;
     bottom: 15px;
-    z-index: 1;
-    transition: z-index 0s, bottom 0.2s;
+    transition: bottom 0.2s;
     box-shadow: 10px 0px 100px #6F2E58;
 
 
 
 }
-
+.img_container > img:hover{
+    cursor: pointer;
+}
 .img_container img:nth-child(1):hover{
     opacity: 1;
     z-index: 3;
@@ -93,11 +92,22 @@
 }
 
 .description{
+   
     position: relative;
     top:-500px;
     opacity: 0;
+    text-align: center;
+    font-family: 'Source Code Pro', monospace;
+    
+}
+
+.dsc{
+    text-transform: capitalize;
+    text-align: justify;
+    flex-wrap: wrap;
+    max-width: 500px;
 }
 .description h1{
-    font-size: xx-large;
-
+    text-align: left;
+    font-size: 45px;
 }
